<resources>
    <string name="app_name">CoursIset</string>
    <!-- Strings used for fragments for navigation -->
    <string name="texthint">"userlogin"</string>
    <string name="show_as_grid">"show as grid"</string>
    <string name="show_as_list">"show as List"</string>

    <string name="passwordhint">Password</string>
    <string name="login_buttn">LOGIN</string>
    <string name="creat">Create Account</string>
    <string name="username">First Name</string>
    <string name="userLastname">Last Name</string>
    <string name="email">Email</string>
    <string name="password">PassWord Have to Be Strong</string>
    <string name="passwordVer">Confirem PassWord</string>
    <string name="title_activity_dataile">DataileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_activity2_d">Cours Details</string>
    <string name="PhoneNumber">Phone Number</string>
</resources>