<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1D9D9"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="449dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="28dp"
        app:cardBackgroundColor="#F8F2F2"
        app:cardCornerRadius="@android:dimen/app_icon_size">

        <EditText
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/texthint"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="180dp"
            android:hint="@string/passwordhint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="280dp"

            android:hint="@string/login_buttn" />

        <TextView
            android:id="@+id/singin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="360dp"
            android:text="@string/creat"
            android:textColor="#2196F3"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.CoursIset.PopupOverlay"
        app:titleTextColor="#F4EFEF" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CoursIset.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="450dp"
        android:layout_marginTop="1000dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</RelativeLayout>